fix: change content stretch

--- a/styles/main/main.scss
+++ b/styles/main/main.scss
@@ -1,4 +1,4 @@
 .main {
-  @include flex(column);
+  @include flex(column, stretch);
   order: 2;
 }
